--- a/DSA/index.html
+++ b/DSA/index.html
@@ -7,5 +7,5 @@
   </head>
   <body></body>
 
-  <script type="module" src="index.js"></script>
+  <script type="module" src="Arrays.js"></script>
 </html>
